--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>淘宝网-淘！我喜欢</title>
-    <link rel="stylesheet" href="./perfect.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -248,27 +248,27 @@
                     </div>
                     <div class="inner-content">
                         <div class="pic-box">
-                            <img src="./img/pic2.png" alt="">
+                            <img src="./images/pic2.png" alt="">
                         </div>
                         <div class="inner-mall">
                             <div class="head">
-                                <img class="logo" src="./img/tm.png" alt="">
+                                <img class="logo" src="./images/tm.png" alt="">
                                 <span class="tm">理想生活上天猫</span>
                                 <span class="page"><strong>1</strong>/6</span>
                             </div>
                             <a href="#">
-                                <img class="ad" src="./img/pic3.png" alt="">
+                                <img class="ad" src="./images/pic3.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="inner-right">
                         <a href="#">
-                            <img src="./img/pic1.png" alt="">
+                            <img src="./images/pic1.png" alt="">
                         </a>
                         <div class="hot">
                             <span>今日热卖</span>
                             <a href="#">
-                                <img src="./img/pic4.png" alt="">
+                                <img src="./images/pic4.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -277,7 +277,7 @@
                     <div class="content">
                         <div class="logo-box"></div>
                         <a href="#" class="con-box">
-                            <img src="./img/pic5.png" alt="">
+                            <img src="./images/pic5.png" alt="">
                             <h4>微漫酱访谈第三期：超萌舞见弥音音！</h4>
                             <p>哈喽，大家好，我是你们可爱的微漫酱，今天我们请到了一位舞见小姐姐来做客我们的访谈事，她就是弥音音！</p>
                         </a>
@@ -420,16 +420,16 @@
                         </a>
                     </h3>
                     <ul>
-                        <li><a href="#"><img src="./img/smalllogo1.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo2.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo3.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo4.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo5.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo6.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo7.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo8.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo9.png" alt=""></a></li>
-                        <li><a href="#"><img src="./img/smalllogo10.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo1.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo2.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo3.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo4.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo5.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo6.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo7.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo8.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo9.png" alt=""></a></li>
+                        <li><a href="#"><img src="./images/smalllogo10.png" alt=""></a></li>
                     </ul>
                 </div>
             </div>
